# Projects

Workspaces/ClarityScript/: Cargo.toml
Workspaces/ClarityScript/src/: main.rs
Workspaces/ClarityScript/src/ClarityScript2/: Cargo.toml
Workspaces/ClarityScript/src/ClarityScript2/src/: 1  (+1 more)
Workspaces/jair-page/: Cargo.toml  LICENSE-MIT  index.html
Workspaces/jair-page/src/: about_page.rs  app.rs  contact_page.rs  landing_page.rs  navbar.rs
Workspaces/jair-page/src/contact_page/: contact_page.rs
Workspaces/jair_page/: Cargo.toml  about.html  index.html  index.scss
Workspaces/jair_page/src/: app.rs  app2.rs  contatos.rs  landing_page.rs  quem_sou.rs
Workspaces/jairfsj_blog/: Cargo.toml  README.md  index.html
Workspaces/jairfsj_blog/src/: app.rs
Workspaces/portfolio/: tailwind.config.js
Workspaces/portfolio/backend/src/: main.rs
Workspaces/portfolio/public/: index.html
Workspaces/portfolio/src/views/: App.vue  main.js
Workspaces/sandbox/mojo/: main  main.mojo
Workspaces/test_cpp/: hello_world  main.cpp
Workspaces/test_docker/miniproject/: .gitignore  .tool-versions  docker-compose.yaml  pachage.json  package.json
Workspaces/test_docker/miniproject/src/: Dockerfile  app.js  docker-compose.yaml
Workspaces/test_html/: index.html
Workspaces/test_rust/backend-stress/: Cargo.toml
Workspaces/test_rust/backend_stress/: Cargo.toml
Workspaces/test_rust/rust_test_1/app_learn/: Cargo.toml  Dockerfile
Workspaces/test_rust/test_yew/my_portfolio/: Cargo.toml  Dockerfile  docker-compose.yml
Workspaces/test_rust/test_yew/yew-app/: .gitignore
(+27 files in other folders)
