[package]
name = "landing_page"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

